# wordle-solver

./: .gitignore  Dockerfile.worker  README.md  all_guesses.pkl  all_words.pkl  first_word_dict.pkl  first_word_dict_test.pkl  five_letter_words.pkl  pyproject.toml  test.py  word-scraper.py  wordle-solver-2.py  wordle-solver.py
.github/workflows/: deploy-pages.yml
app/: __init__.py
app/api/: __init__.py  lambda_handler.py  local_api.py  service.py
app/solver/: __init__.py  adapter.py  legacy_solver1.py  legacy_solver2.py  models.py  resources.py  validation.py
app/solver/data/: __init__.py
app/worker/: __init__.py  main.py
frontend/: app.js  config.js  index.html  styles.css
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: build_frontend.py  build_lambda_package.py  build_worker.sh  deploy_infra.sh  push_worker.sh  run_local.sh  upload_frontend.sh
tests/: test_api.py  test_resources.py  test_solver_adapter.py  test_validation.py
web-page/: Wordle Archive.html
