[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordle-solver-mvp"
version = "0.1.0"
description = "Minimal Wordle solver MVP built from the legacy experimental repo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.solver.data" = ["*.txt", "*.pkl"]
